--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | 3-column preview card component</title>
   <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://codepen.io/Alexandra-Iuga" target="_blank">Alexandra Iuga</a>.
+    Coded by <a href="https://github.com/Alexandra-Iuga" target="_blank">Alexandra Iuga</a>.
   </div>
 
   <div class="container">
